--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content:center;
 }
 
 .tipos{
@@ -17,10 +17,10 @@
 
 .tipos li{
     list-style: none;
-    margin: 10px;
+    margin: 1rem;
 }
 
 .contenedor img{
-    width: 50px;
-    height: 50px;
+    width: 5rem;
+    height: 5rem;
 }
